tests/src/frontend/typechecking/invalid/unknown_pattern2.sk
base class Foo
class Bar<T>(T) extends Foo

fun doit(x: Foo): _ {
  x match {
  | Bar(y) -> y
  }
}
